--- a/app/views/static_pages/blog.html.erb
+++ b/app/views/static_pages/blog.html.erb
@@ -1,6 +1,6 @@
-<% provide(:title, 'Help') %>
-<h1>Help</h1>
+<% provide(:title, 'Blog') %>
+<h1>Blog</h1>
 <p>
-	This is the help page for the
+	This is the blog page for the
 	<a href="https://github.com/Dev-Dipesh/tweet360">Tweet360</a> web application.
 </p>
