--- a/app/views/static_pages/business.html.erb
+++ b/app/views/static_pages/business.html.erb
@@ -1,6 +1,6 @@
-<% provide(:title, 'Home') %>
-<h1>Home</h1>
+<% provide(:title, 'Business') %>
+<h1>Business</h1>
 <p>
-	This is the home page for the
+	This is the business page for the
 	<a href="https://github.com/Dev-Dipesh/tweet360">Tweet360</a> web application.
 </p>
