--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,51 @@
-<% provide(:title, 'Home') %>
-<h1>Home</h1>
-<p>
-	This is the home page for the
-	<a href="https://github.com/Dev-Dipesh/tweet360">Tweet360</a> web application.
-</p>
+<%= link_to image_tag("tweet360 logo.png", align: "left", width: "400", height: "430", alt: "Tweet360 logo"), 'https://github.com/Dev-Dipesh/tweet360' %>
+<div class="center hero-unit">
+	<h1>Welcome to Tweet360</h1>
+	
+	<h2>
+		Find out what's going on around you, right now, with the people and organizations you care the most.
+	</h2>
+
+	<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
+
+<script type="text/javascript">
+$(function () {
+	$("#slider1").slider({
+		speed: 500,
+		width: 945,
+		height: 350,
+		autoPlay: true
+	});
+});
+</script>
+
+<link type="text/css" rel="stylesheet" href="jquery.slider.css" />
+<script type="text/javascript" src="jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="jquery.easing.compatibility.js"></script>
+<script type="text/javascript" src="jquery.slider.min.js"></script>
+
+<div id="slider1" class="slider">
+	<div class="slider-box">
+		<%= link_to image_tag("1.jpg", width: "945", height: "350", alt: "", class: "slider-item") %>
+		<%= link_to image_tag("2.jpg", width: "945", height: "350", alt: "", class: "slider-item") %>
+		<%= link_to image_tag("3.jpg", width: "945", height: "350", alt: "", class: "slider-item") %>
+		<%= link_to image_tag("4.jpg", width: "945", height: "350", alt: "", class: "slider-item") %>
+		<%= link_to image_tag("5.jpg", width: "945", height: "350", alt: "", class: "slider-item") %>
+
+	</div>
+	<div class="slider-control">
+		<a href="#" class="slider-play"></a>
+		<a href="#" class="slider-stop"></a>
+	</div>		
+	<div class="slider-nav">
+		<a href="#"></a>
+		<a href="#"></a>
+		<a href="#"></a>
+		<a href="#"></a>
+		<a href="#"></a>
+	</div>
+	<a href="#" class="slider-arrow slider-prev"></a>
+	<a href="#" class="slider-arrow slider-next"></a>
+</div>
