--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,6 @@
 		<%= render 'layouts/footer' %>
 		<%= debug(params) if Rails.env.development? %>
 	</div>
-	
+	<%= render :partial => ‘layouts/ga’ if Rails.env.production? %>
 </body>
 </html>
